--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "dependencies": {
     "audiobuffer-to-wav": "^1.0.0",
+    "browserify": "^17.0.0",
     "recorder": "^0.0.1",
     "tonal": "^4.8.0",
     "tone": "^14.7.77",
     "wav-encoder": "^1.3.0",
     "web-audio-recorder-js": "^0.0.2",
     "xhr": "^2.6.0"
+  },
+  "devDependencies": {
+    "esmify": "^2.1.1"
   }
 }
